syntax = "proto3";

package dfuse.eosdb.kv.v1;

option go_package = "github.com/dfuse-io/dfuse-eosio/pb/dfuse/eosdb/kv/v1;pbkv";

import "dfuse/codecs/eos/eos.proto";
import "google/protobuf/timestamp.proto";

message ImplicitTrxRow {
  // Primary key to include: transaction_id and block_id
  dfuse.codecs.eos.SignedTransaction signed_trx = 1;
  string name = 2;
}

message TrxRow {
  // Primary key to include: transaction_id and block_id

  dfuse.codecs.eos.SignedTransaction signed_trx = 1;
  dfuse.codecs.eos.TransactionReceipt receipt = 2;
  dfuse.codecs.eos.PublicKeys public_keys = 3;
}

message TrxTraceRow {
  // Primary key to include: transaction_id and block_id

  dfuse.codecs.eos.TransactionTrace trx_trace = 1;
  dfuse.codecs.eos.BlockHeader block_header = 2;
}

message DtrxRow {
  // Primary key to include: transaction_id and block_id

  dfuse.codecs.eos.SignedTransaction signed_trx = 1;
  dfuse.codecs.eos.ExtDTrxOp created_by = 2;
  dfuse.codecs.eos.ExtDTrxOp canceled_by = 3;
}

message BlockRow {
  // Key will be block_id

  // We want another index also:
  //    blockTime:blockID = \01

  dfuse.codecs.eos.Block block = 1;
  dfuse.codecs.eos.TransactionRefs implicit_trx_refs = 2;
  dfuse.codecs.eos.TransactionRefs trx_refs = 3;
  dfuse.codecs.eos.TransactionRefs trace_refs = 4;
}

message AccountRow {
  // Key will be account:block_id    // block_id, block_num and account implicit in key
  string name = 1;
  string creator = 2;
  string block_id = 3;
  string trx_id = 4;
  google.protobuf.Timestamp block_time = 5;
}